[package]
name = "rusted_lock_screen"
version = "0.1.0"
authors = ["Alex Pronschinske <apronschinske@ara.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'  # Optimize for size.
panic = 'abort'

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "synchapi"] }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]
